# Logia

./: .env  .gitignore  LICENSE  README.md  ]  components.json  flake.nix  index.html  package.json  shell.nix  vite.config.ts  website_nixos_install.md
.github/: FUNDING.yml
.github/workflows/: main.yml
src/: App.css  App.tsx  main.tsx  overlay.html  overlay.js
src-tauri/: .env.example  Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: build-audio.js
src-tauri/src/: google_drive.rs  lib.rs  main.rs  sync_manifest.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/audio/linux/: capture.rs
src-tauri/src/audio/mac/: .gitignore  Package.swift  SystemAudioDump  SystemAudioDump-aarch64-apple-darwin  SystemAudioDump.swift  build.sh  capture.rs  record.cjs  record.js
src-tauri/src/audio/transcription/: mod.rs  transcribe.py
src-tauri/src/audio/windows/: .gitignore  Windows.csproj  capture.rs  program.cs
src/components/: Ai-loader.tsx  AiSidebar.tsx  AnimatedFileTree.tsx  Canvas.tsx  CommandPalette.css  CommandPalette.tsx  Editor.tsx  EditorProvider.tsx  EmptyState.tsx  Excalidraw.tsx  FileTree.tsx  Footer.tsx  Header.tsx  KanbanBoard.tsx  NoteEditor.tsx  Overlay.tsx  PrereflightModal.tsx  RecStatus.tsx  Search.tsx  Settings.tsx  Sidebar.tsx  SyncConflictDialog.tsx  Toolbar.tsx  Wave.tsx  index.css  styles.css
src/components/animate-ui/backgrounds/: stars.tsx
src/components/animate-ui/text/: shimmering.tsx
src/components/chat/: SuggestionCard.tsx
src/components/ui/: ai-prompt-box.tsx
src/components/ui/shadcn-io/kanban/: index.tsx
src/lib/: aiTranscription.ts  editor-actions.ts  imagePersistence.ts  utils.ts
src/store/: UiStore.ts  notesStore.ts
src/types/: Note.ts
src/utils/: pdf-exporter.ts
