[package]
name = "kortex"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kortex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-fs = "2"
libc = "0.2.175"
dotenvy = "0.15"
keyring = "3.6.3"
tauri-plugin-shell = "2"
aes-gcm = "0.10"
base64 = "0.22"


[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "0.2.0"
objc2 = "0.5.2"
objc2-foundation = { version = "0.2.2", features = ["std"]  }
