[package]
name = "logia"
version = "0.9.4"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "logia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-fs = "2"
libc = "0.2.175"
dotenvy = "0.15"
keyring = "3.6.3"
tauri-plugin-shell = "2"
aes-gcm = "0.10"
base64 = "0.22"
google-drive3 = "5.0"
yup-oauth2 = "8.1"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.24"
mime = "0.3"
# Ensure tokio is available with full features for async tasks
tokio = { version = "1", features = ["full"] }
dirs = "5"
open = "3"
sha2 = "0.10"
rand = "0.8"
fs2 = "0.4"


[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = {version="1"}
objc2 = "0.5.2"
objc2-foundation = { version = "0.2.2", features = ["std"]  }
cocoa = "0.26.1"
